# deriving

./: README.md  deriving.cabal
app/: Main.hs
